--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 
         <div class="endpoint">
             <h4>Retrieve an Alien by ID</h4>
-            <p><code>GET /api/alien/:id</code></p>
+            <p><code>GET /api/alien/id/:id</code></p>
             <p>Returns an alien by its ID.</p>
             <h5>Example Response</h5>
             <pre><code>{
@@ -161,7 +161,7 @@
 
         <div class="endpoint">
             <h4>Retrieve a Character by ID</h4>
-            <p><code>GET /api/character/:id</code></p>
+            <p><code>GET /api/character/id/:id</code></p>
             <p>Returns a character by its ID.</p>
             <h5>Example Response</h5>
             <pre><code>{
